# PyExtal

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/source/: LARBEDindex.md  ROI.md  architecture.md  conf.py  examples.md  introduction.md  usage.md
docs/source/notebooks/: refinemntLARBEDSi111sys0420.ipynb
example/CBED/: refinemnt_si04.ipynb
example/LARBED/: deconv3_ri4_g_vectors.npy  refinemntLARBEDSi111sys0420.ipynb
examples/: LARBEDSimulation.py  refinemnt.ipynb  refinemntLARBEDGGG.ipynb  refinemntLARBEDSi111sys.ipynb  refinemnt_si04.ipynb
src/: git_version.f90.in
src/data/: sftabl.sct
src/pyextal/: Constants.py  LucyRichardson.py  __init__.py  callBloch.py  densityMap.py  dinfo.py  gof.py  metric.py  optimize.py  roi.py  spgra  symmetry.py
test/: parallelBenchmark.py  syntheticDataSys.py  syntheticDataZA.py  syntheticTest.py  testCBED.py  testLARBED.py  test_callbloch.py  test_coarseOptimize.py  test_roi.py  test_symmetry.py
